# scrappybot

./: Cargo.toml  Makefile
lambda/: Cargo.toml
lambda/src/: main.rs
src/: bot.rs  lib.rs  main.rs  notification.rs  state.rs  storage.rs  telegram_api.rs
src/api/: mod.rs  yandex_disk_api.rs
src/scrapes/: hudhomestore.rs  mod.rs
