[package]
name = "scrappybot"    
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
edition = "2018"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "scrappybot"
# path = "src/main.rs"

[lib]
name = "scrappybotlib"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "*"

[dependencies]
reqwest = { version = "0.10", features = ["json", "socks", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
select = {git = "https://github.com/utkarshkukreti/select.rs"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.31"
glob = "0.3.0"


[workspace]
members = [
    ".",
    "lambda",
]

default-members = [".", "lambda"]