[package]
name = "lambda"
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
edition = "2018"
default-run="bootstrap"
bin = "bootstrap"
# default-run="nes"
# default-run="palette"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scrappybot = { path = ".." } 
tokio = { version = "0.2", features = ["full"] }
